Auto releases test (#3)
* Add a working automated release action to the main workflow

* Use the correct ID

* Remove commented-out lines in the release workflow

* Simple comment tweak to trigger the workflow on merge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,14 +30,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_API_TAGGING: false # uses git cli
 
-      # auto releases is not working atm and is deleting releases due branch tags
-      - name: automatic-draft-release
-        uses: marvinpinto/action-automatic-releases@v1.2.1
+      - name: automatic-release
+        uses: softprops/action-gh-release@v2.0.0
         with:
-          draft: true
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ steps.tag.outputs.tag }}: [title-edit-me] by:${{ github.actor }}"
-          automatic_release_tag: ${{ steps.tag.outputs.new_tag }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.tag.outputs.new_tag }}
+          generate_release_notes: true
+          prerelease: false
 
       - name: version-tag-major
         env:
